Fix long filenames pushing upload status/size off-screen
Use table-layout: fixed so the table respects column widths, and
truncate the filename column with text-overflow: ellipsis when the
name is too long to fit.

--- a/app/assets/stylesheets/upload.css.sass
+++ b/app/assets/stylesheets/upload.css.sass
@@ -1,6 +1,8 @@
 .upload
   &__list
     margin-top: 1em
+    table-layout: fixed
+    width: 100%
 
     & + .progress
       margin-bottom: 0
@@ -13,6 +15,11 @@
 
       &:last-child
         text-align: center
+
+      &:nth-child(2)
+        overflow: hidden
+        text-overflow: ellipsis
+        white-space: nowrap
 
       &:nth-child(3)
         width: 6em
